--- a/.github/workflows/gh-actions-usage-report.yml
+++ b/.github/workflows/gh-actions-usage-report.yml
@@ -1,14 +1,14 @@
 name: 00. GitHub Actions Usage Report
 
-on:
-  workflow_dispatch:
-  schedule:
-    #        ┌─────────────── minute
-    #        │ ┌──────────── hour
-    #        │ │ ┌────────── day (month)
-    #        │ │ │ ┌──────── month
-    #        │ │ │ │ ┌────── day (week)
-    - cron: '0 1 * * *'
+# on:
+#   workflow_dispatch:
+#   schedule:
+#     #        ┌─────────────── minute
+#     #        │ ┌──────────── hour
+#     #        │ │ ┌────────── day (month)
+#     #        │ │ │ ┌──────── month
+#     #        │ │ │ │ ┌────── day (week)
+#     - cron: '0 1 * * *'
     
 jobs:
   organization:
